compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__logic_const_ops-3.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: true and false

---
"_"@(FileId(1), 6..7) -> Bool(false)


